--- a/homework3/assets/css/structure.css
+++ b/homework3/assets/css/structure.css
@@ -14,7 +14,7 @@ ul{padding:0; margin:0; list-style:none}
 a{text-decoration:none; color:#666}
 a:hover{color:#272727}
 h2{font-family:'Varela',sans-serif}
-.img-center{display:block; margin-left:auto; margin-right:auto; text-align:center}
+.img-center{display:block; margin-left:auto; margin-right:auto; text-align:left}
 .img-right{display:block; margin-left:auto}
 .img-left{display:block; margin-right:auto}
 .yellow_bg{background-color:#ffd62c}
@@ -63,7 +63,7 @@ h2{font-family:'Varela',sans-serif}
 .single_sarticle_inner{background-color:#fff; display:inline; float:left; margin:-60px 20px 0; padding:10px 20px; width:auto}
 .stuff_category{color:#444; display:inline-block; font-size:10px; outline:medium none; text-decoration:none; text-transform:uppercase}
 .stuff_article_inner{float:left; display:inline; width:100%}
-.stuff_date{background-color:#ffd62c; border-radius:3px; color:#fff; float:left; font-size:14px; margin:10px 15px 0 0; padding:5px 8px; text-align:center; width:56px}
+.stuff_date{background-color:#ffd62c; border-radius:3px; color:#fff; float:left; font-size:14px; margin:10px 15px 10px 15px; padding:5px 8px; text-align:center; width:100px;}
 .stuff_date strong{font-size:20px}
 .stuff_article_inner h2{font-size:24px; line-height:1.5em; margin:0; padding:5px 0 0}
 .stuff_article_inner h2 > a{color:#444}
